switch to OkHttpClient and set MinSdkVersion to 16